--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -50,11 +50,10 @@
 		<div th:if="${videoUrl != null}">
 
 			<video controls>
-				<source th:src="${videoUrl}" type="video/mp4">
-				<!-- <source src="myVideo.webm" type="video/webm"> -->
+				<source th:src="${videoUrl}" th:type="${videoContentType}">
 				<p>
 					Your browser doesn't support HTML5 video. Here is a <a
-						href="myVideo.mp4">link to the video</a> instead.
+						th:href="${videoUrl}">link to the video</a> instead.
 				</p>
 			</video>
 
