--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -53,7 +53,9 @@
 		<div th:if="${videoUrl != null}">
 
 			<video controls>
-				<source th:src="${videoUrl}" th:type="${videoContentType}">
+				<source th:src="${videoUrl}" type="video/webm">
+				<source th:src="${videoUrl}" type="video/ogg">
+				<source th:src="${videoUrl}" type="video/mp4">
 				<p>
 					Your browser doesn't support HTML5 video. Here is a <a
 						th:href="${videoUrl}">link to the video</a> instead.
