Adicionando página de erro customizada.

--- a/src/main/resources/templates/layout/header.html
+++ b/src/main/resources/templates/layout/header.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head lang="en">
 <meta http-equiv="Content-Type" content="text/html" charset="UTF-8" />
-
+<title>Aplicação Para Conversão de Vídeo</title>
 <link th:href="@{/webjars/bootstrap/4.0.0/css/bootstrap.min.css}" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" media="screen" />
 <link rel="stylesheet" th:href="@{/css/style.css}"href="../../static/css/style.css" />
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
