--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,7 +2,6 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8" />
-<title>Aplicação Para Conversão de Vídeo</title>
 <th:block th:include="layout/header"></th:block>
 </head>
 <body>
@@ -10,8 +9,8 @@
 
 		<div class="mb-3">
 			<div class="jumbotron">
-				<div class="row text-left">
-					<div class="row">
+				<div class="text-center">
+					<div>
 						<h2>Informe um vídeo e escolha o formato para o qual deseja
 							convertê-lo.</h2>
 					</div>
@@ -50,11 +49,11 @@
 
 		<p />
 
-		<div th:if="${outputId != null}">
-			
-		<div align="center" >			
-			<i class="fa fa-spinner fa-spin" id="loader" style="font-size:25px"></i>
-		</div>
+		<div th:if="${outputId != null && error == null}">
+				
+			<div align="center" id="loader" >			
+				<i class="fa fa-spinner fa-spin" style="font-size:25px"></i> Processando... 
+			</div>
 			
 			<script th:inline="javascript">
 				/*<![CDATA[*/
